[gd_scene load_steps=4 format=3 uid="uid://koobr7ero3s5"]

[ext_resource type="Script" path="res://minigames/counting/falling_decimals_0_to_1/falling_decimals_0_to_1.gd" id="1_x1cqw"]
[ext_resource type="AudioStream" uid="uid://8fy8l62igru3" path="res://minigames/counting/falling_decimals_0_to_1/assets/House In a Forest Loop.ogg" id="2_m8xk6"]
[ext_resource type="AudioStream" uid="uid://b4fv1iqjixc7q" path="res://minigames/counting/falling_decimals_0_to_1/assets/gameover.wav" id="3_u5dyu"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x1cqw")

[node name="ScoreBox" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1800.0
offset_top = 100.0
offset_right = 1870.0
offset_bottom = 170.0
color = Color(0.278431, 0.462745, 0.317647, 1)

[node name="ScoreLabel" type="Label" parent="ScoreBox"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="RoundsBox" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.701961, 0.0431373, 0.266667, 0.431373)

[node name="RoundsLabel" type="Label" parent="RoundsBox"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="EndBox" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 255.0
offset_top = 128.0
offset_right = 378.0
offset_bottom = 155.0
color = Color(0, 0, 0, 1)

[node name="OverLabel" type="Label" parent="EndBox"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "GAME OVER"

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_m8xk6")

[node name="GameOver" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_u5dyu")

[node name="NumberTimer" type="Timer" parent="."]
wait_time = 3.085

[node name="RestartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 257.0
offset_top = 188.0
offset_right = 332.0
offset_bottom = 219.0
text = "RESTART"

[node name="RestartLabel" type="Label" parent="RestartButton"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="ScoreBoard" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1800.0
offset_top = 100.0
offset_right = 1870.0
offset_bottom = 170.0
color = Color(0, 0.607843, 0.294118, 1)

[node name="Line1" type="Label" parent="ScoreBoard"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Line2" type="Label" parent="ScoreBoard"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="HighScore" type="Label" parent="ScoreBoard"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="ScoreBorder" type="ReferenceRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RoundsBorder" type="ReferenceRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
